# libcxn

./: README.md  setup.cfg
libcxn/: __init__.py
libcxn/math/: __init__.py  __main__.py
libcxn/math/numeric/: __init__.py  numeric.py
libcxn/math/symbolic/: __init__.py  symbolic.py
libcxn/math/visualization/: visualization.py
