[metadata]
name = libcxn
version = file: VERSION
description = General-purpose mathematical and scientific utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Bugra Coskun
author_email = j0shxn@protonmail.com
license = GPLv3
license_file = LICENSE
url = https://github.com/j0shxn/libcxn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    sympy
    matplotlib
    pandas

[options.package_data]
* = *.md, *.txt, *.rst

[options.extras_require]
dev =
    pytest
    sphinx
    pdoc

[options.entry_points]
# Example: scripts, if you ever add CLI tools
# console_scripts =
#     libcxn-cli = libcxn.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = libcxn/_version.py
versionfile_build = libcxn/_version.py
tag_prefix =
parentdir_prefix_version = libcxn-

[egg_info]
egg_base = build
